--- a/idex.html
+++ b/idex.html
@@ -15,8 +15,8 @@
     />
   </head>
   <body>
-    <section><!--Intro-->
-        
+    <section id="intro"><!--Intro-->
+        <div></div>
     </section>
 
     <section><!--Projects-->
