--- a/idex.html
+++ b/idex.html
@@ -15,9 +15,9 @@
     />
   </head>
   <body>
-    <section id="intro"><!--Intro-->
-        <div></div>
-    </section>
+    <header id="intro"><!--Intro-->
+       <img src="assets/img/avatar.svg" alt="">
+    </header>
 
     <section><!--Projects-->
 
