--- a/idex.html
+++ b/idex.html
@@ -15,29 +15,31 @@
     />
   </head>
   <body>
-    <header id="intro"><!--Intro-->
-       <img src="assets/img/avatar.svg" alt="avatar">
-       <p class="name">
-          Hello World! Meu nome é <span>Martina Santos</span> e sou
-       </p>
-       <h1 class="occupation">Desenvolvedora Fullstack</h1>
-       <p class="about">
-        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
-       </p>
-
-       <div class="skills">
-        <ul>
-          <li> <img src="./assets/icons/GitHub.svg">GitHub</li>
-          <li> <img src="./assets/icons/HTML.svg">HTML</li>
-          <li> <img src="./assets/icons/CSS.svg">CSS</li>
-          <li> <img src="./assets/icons/JavaScript.svg">JavaScript</li>
-          <li> <img src="./assets/icons/React.svg">React</li>
-          <li> <img src="./assets/icons/Node.js.svg">Node.js</li>
-        </ul>
-       </div>
-       <a href="#jobs" lass="next"></a>
-       <img src="./assets/icons/CaretDoubleDown.svg" alt="">
-    </header>
+    <section id="intro">
+      <header class="container intro"><!--Intro-->
+         <img src="assets/img/avatar.svg" alt="avatar">
+         <p class="name">
+            Hello World! Meu nome é <span>Martina Santos</span> e sou
+         </p>
+         <h1 class="occupation">Desenvolvedora Fullstack</h1>
+         <p class="about">
+          Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+         </p>
+         
+         <div class="skills">
+          <ul>
+            <li> <img src="./assets/icons/GitHub.svg">GitHub</li>
+            <li> <img src="./assets/icons/HTML.svg">HTML</li>
+            <li> <img src="./assets/icons/CSS.svg">CSS</li>
+            <li> <img src="./assets/icons/JavaScript.svg">JavaScript</li>
+            <li> <img src="./assets/icons/React.svg">React</li>
+            <li> <img src="./assets/icons/Node.js.svg">Node.js</li>
+          </ul>
+         </div>
+         <a href="#jobs" lass="next"></a>
+         <img src="./assets/icons/CaretDoubleDown.svg" alt="">
+      </header>
+    </section>
 
     <section><!--Projects-->
 
