estrutura HTML dos meus trabalhos criada

--- a/idex.html
+++ b/idex.html
@@ -15,42 +15,96 @@
     />
   </head>
   <body>
+    <!--Intro-->
     <section id="intro">
-      <header class="container intro"><!--Intro-->
-         <img src="assets/img/avatar.svg" alt="avatar">
-         <p class="name">
-            Hello World! Meu nome é <span>Martina Santos</span> e sou
-         </p>
-         <h1 class="occupation">Desenvolvedora Fullstack</h1>
-         <p class="about">
-          Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
-         </p>
-         
-         <div class="skills">
+      <header class="container intro">
+        <img src="assets/img/avatar.svg" alt="avatar" />
+        <p class="name">
+          Hello World! Meu nome é <span>Martina Santos</span> e sou
+        </p>
+        <h1 class="occupation">Desenvolvedora Fullstack</h1>
+        <p class="about">
+          Transformo necessidades em aplicações reais, evolventes e funcionais.
+          Desenvolvo sistemas através da minha paixão pela tecnologia,
+          contribuindo com soluções inovadoras e eficazes para desafios
+          complexos.
+        </p>
+
+        <div class="skills">
           <ul>
-            <li> <img src="./assets/icons/GitHub.svg">GitHub</li>
-            <li> <img src="./assets/icons/HTML.svg">HTML</li>
-            <li> <img src="./assets/icons/CSS.svg">CSS</li>
-            <li> <img src="./assets/icons/JavaScript.svg">JavaScript</li>
-            <li> <img src="./assets/icons/React.svg">React</li>
-            <li> <img src="./assets/icons/Node.js.svg">Node.js</li>
+            <li><img src="./assets/icons/GitHub.svg" />GitHub</li>
+            <li><img src="./assets/icons/HTML.svg" />HTML</li>
+            <li><img src="./assets/icons/CSS.svg" />CSS</li>
+            <li><img src="./assets/icons/JavaScript.svg" />JavaScript</li>
+            <li><img src="./assets/icons/React.svg" />React</li>
+            <li><img src="./assets/icons/Node.js.svg" />Node.js</li>
           </ul>
-         </div>
-         <a href="#jobs" lass="next"></a>
-         <img src="./assets/icons/CaretDoubleDown.svg" alt="">
+        </div>
+        <a href="#jobs" lass="next"></a>
+        <img src="./assets/icons/CaretDoubleDown.svg" alt="" />
       </header>
     </section>
 
-    <section><!--Projects-->
+    <!--Projects-->
+    <section is="jobs">
+      <main class="container jobs">
+        <p class="title-section">Meus trabalhos</p>
+        <h2 class="subtitle-section">veja meus projetos em destaque</h2>
 
+        <div class="cards">
+          <div class="card-item">
+            <img src="./assets/img/Thumbnail_Project-01.png" alt="">
+            <span>Travelgram</span>
+            <p>
+              Rede social onde as pessoas mostram os registros de suas viagens pelo mundo
+            </p>
+          </div>
+
+          <div class="card-item">
+            <img src="./assets/img/Thumbnail_Project-02.png" alt="">
+            <span>Tech News</span>
+            <p>
+              Homepage de um portal de notícias sobre a área de tecnologia
+            </p>
+          </div>
+
+          <div class="card-item">
+            <img src="./assets/img/Thumbnail_Project-03.png" alt="">
+            <span>Página de receita</span>
+            <p>
+              Página com o passo a passo de uma receita para cupcakes
+            </p>
+          </div>
+
+          <div class="card-item">
+            <img src="./assets/img/Thumbnail_Project-04.png" alt="">
+            <span>Zingen</span>
+            <p>
+              Landing Page completa e responsiva de um aplicativo de Karaokê
+            </p>
+          </div>
+
+          <div class="card-item">
+            <img src="./assets/img/Thumbnail_Project-05.png" alt="">
+            <span>Refund</span>
+            <p>
+              Um sistema para pedido e acompanhamento de reembolso 
+            </p>
+          </div>
+
+          <div class="card-item">
+            <img src="./assets/img/Thumbnail_Project-06.png" alt="">
+            <span>Página de turismo</span>
+            <p>
+              Página com as principais informações para quem quer viajar para Busan 
+            </p>
+          </div>
+        </div>
+      </main>
     </section>
 
-    <section><!--Services-->
+    <section><!--Services--></section>
 
-    </section>
-
-    <section><!--Contact-->
-
-    </section>
+    <section><!--Contact--></section>
   </body>
 </html>
