estilização dos meus trabalhos concluída

--- a/idex.html
+++ b/idex.html
@@ -46,7 +46,7 @@
     </section>
 
     <!--Projects-->
-    <section is="jobs">
+    <section id="jobs">
       <main class="container jobs">
         <p class="title-section">Meus trabalhos</p>
         <h2 class="subtitle-section">veja meus projetos em destaque</h2>
