terminando alguns reajustes nas fontes do global

--- a/idex.html
+++ b/idex.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+    
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Dve</title>
@@ -53,31 +53,28 @@
 
         <div class="cards">
           <div class="card-item">
-            <img src="./assets/img/Thumbnail_Project-01.png" alt="">
+            <img src="./assets/img/Thumbnail_Project-01.png" alt="" />
             <span>Travelgram</span>
             <p>
-              Rede social onde as pessoas mostram os registros de suas viagens pelo mundo
+              Rede social onde as pessoas mostram os registros de suas viagens
+              pelo mundo
             </p>
           </div>
 
           <div class="card-item">
-            <img src="./assets/img/Thumbnail_Project-02.png" alt="">
+            <img src="./assets/img/Thumbnail_Project-02.png" alt="" />
             <span>Tech News</span>
-            <p>
-              Homepage de um portal de notícias sobre a área de tecnologia
-            </p>
+            <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
           </div>
 
           <div class="card-item">
-            <img src="./assets/img/Thumbnail_Project-03.png" alt="">
+            <img src="./assets/img/Thumbnail_Project-03.png" alt="" />
             <span>Página de receita</span>
-            <p>
-              Página com o passo a passo de uma receita para cupcakes
-            </p>
+            <p>Página com o passo a passo de uma receita para cupcakes</p>
           </div>
 
           <div class="card-item">
-            <img src="./assets/img/Thumbnail_Project-04.png" alt="">
+            <img src="./assets/img/Thumbnail_Project-04.png" alt="" />
             <span>Zingen</span>
             <p>
               Landing Page completa e responsiva de um aplicativo de Karaokê
@@ -85,18 +82,17 @@
           </div>
 
           <div class="card-item">
-            <img src="./assets/img/Thumbnail_Project-05.png" alt="">
+            <img src="./assets/img/Thumbnail_Project-05.png" alt="" />
             <span>Refund</span>
-            <p>
-              Um sistema para pedido e acompanhamento de reembolso 
-            </p>
+            <p>Um sistema para pedido e acompanhamento de reembolso</p>
           </div>
 
           <div class="card-item">
-            <img src="./assets/img/Thumbnail_Project-06.png" alt="">
+            <img src="./assets/img/Thumbnail_Project-06.png" alt="" />
             <span>Página de turismo</span>
             <p>
-              Página com as principais informações para quem quer viajar para Busan 
+              Página com as principais informações para quem quer viajar para
+              Busan
             </p>
           </div>
         </div>
