seção meus serviços concluída

--- a/idex.html
+++ b/idex.html
@@ -99,7 +99,35 @@
       </main>
     </section>
 
-    <section><!--Services--></section>
+    <!--Services-->
+    <section id="services">
+      <div class="container services">
+        <p class="title-section">
+          Meus serviços
+        </p>
+        <h2 class="subtitle-section">
+          Como posso ajudar seu negócio
+        </h2>
+        <div class="cards">
+          <div class="card-item">
+            <img src="assets/icons/devices.svg" alt="icone de cp com celular">
+            <span>Websites e Aplicativos</span>
+            <p>Desenvolvimento de interfaces</p>
+          </div>
+
+          <div class="card-item">
+            <img src="assets/icons/hardeDrives.svg" alt="icone de drivers">
+            <span>API e banco de dados</span>
+            <p>DCriação de serviços do sistema </p>
+          </div>
+
+          <div class="card-item">
+             <img src="assets/icons/infinity.svg" alt="icone do infinito">
+            <span>DevOps</span>
+            <p>Gestão e infraestrutura da aplicação</p>
+          </div>
+        </div>
+    </section>
 
     <section><!--Contact--></section>
   </body>
